syntax = "proto3";

package himo.v1;

option go_package = "github.com/bamboooo-dev/himo/pkg/grpc/v1/himo/proto";

service Room {
    rpc GetContent (ContentRequest) returns (ContentResponse) {}
}

message ContentRequest {
    uint64 id = 1;
}

message ContentResponse {
    Table table = 1;
}

message Table{
    uint64 id = 1;
    string name = 2;
}
